--- a/Reading from Arduino.ipynb
+++ b/Reading from Arduino.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,23 +10,136 @@
     "import numpy as np # Import numpy\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt #import matplotlib library\n",
-    "import time"
+    "import time\n",
+    "import csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'astype'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-9ea163011269>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0marduinoString\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marduinoData\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#read the line of text from the serial port\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mdataArray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marduinoString\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\r\\n'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\t'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m#Split it into an array called dataArray\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m# Write data to an excel file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'astype'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.    0.82  0.77 -0.52]\n",
+      "[ 1.    0.86  0.83 -0.83]\n",
+      "[ 1.    0.91  0.96 -1.07]\n",
+      "[ 1.    0.94  1.03 -1.28]\n",
+      "[ 1.    0.87  1.07 -1.42]\n",
+      "[ 1.    0.77  1.1  -1.39]\n",
+      "[ 1.    0.82  1.14 -1.06]\n",
+      "[ 1.    0.7   1.2  -0.74]\n",
+      "[ 1.    0.51  1.31 -0.54]\n",
+      "[ 1.    0.4   1.46 -0.37]\n",
+      "[ 1.    0.15  1.45 -0.47]\n",
+      "[ 1.   -0.02  1.29 -0.5 ]\n",
+      "[ 1.    0.14  0.72 -0.45]\n",
+      "[ 1.   -0.18 -0.05 -0.51]\n",
+      "[ 1.   -0.27 -0.94 -0.59]\n",
+      "[ 1.   -0.27 -1.75 -0.55]\n",
+      "[ 1.   -0.32 -2.16 -0.32]\n",
+      "[ 1.    0.16 -2.21  0.04]\n",
+      "[ 1.    0.36 -1.97  0.29]\n",
+      "[ 1.    0.34 -1.55  0.33]\n",
+      "[ 1.    0.34 -1.24  0.2 ]\n",
+      "[ 1.    0.27 -1.14 -0.08]\n",
+      "[ 1.    0.27 -1.1  -0.35]\n",
+      "[ 1.    0.33 -1.04 -0.52]\n",
+      "[ 1.    0.33 -0.98 -0.59]\n",
+      "[ 1.    0.35 -0.9  -0.61]\n",
+      "[ 1.    0.33 -0.79 -0.5 ]\n",
+      "[ 1.    0.33 -0.78 -0.31]\n",
+      "[ 1.    0.37 -0.81 -0.13]\n",
+      "[ 1.    0.37 -0.84 -0.1 ]\n",
+      "[ 1.    0.35 -0.86 -0.17]\n",
+      "[ 1.    0.35 -0.84 -0.25]\n",
+      "[ 1.    0.35 -0.88 -0.3 ]\n",
+      "[ 1.    0.34 -0.89 -0.34]\n",
+      "[ 1.    0.34 -0.95 -0.34]\n",
+      "[ 1.    0.3  -1.03 -0.34]\n",
+      "[ 1.    0.28 -1.05 -0.32]\n",
+      "[ 1.    0.26 -1.03 -0.26]\n",
+      "[ 1.    0.25 -1.01 -0.17]\n",
+      "[ 1.    0.24 -1.05 -0.07]\n",
+      "[ 1.    0.21 -1.12  0.01]\n",
+      "[ 1.    0.19 -1.14  0.12]\n",
+      "[ 1.    0.18 -1.12  0.21]\n",
+      "[ 1.    0.18 -1.14  0.25]\n",
+      "[ 1.    0.17 -1.19  0.18]\n",
+      "[ 1.    0.21 -1.24 -0.01]\n",
+      "[ 1.    0.23 -1.26 -0.24]\n",
+      "[ 1.    0.23 -1.23 -0.38]\n",
+      "[ 1.    0.21 -1.17 -0.41]\n",
+      "[ 1.    0.26 -1.1  -0.34]\n",
+      "[ 1.    0.29 -1.13 -0.26]\n",
+      "[ 1.    0.33 -1.04 -0.28]\n",
+      "[ 1.    0.34 -1.   -0.37]\n",
+      "[ 1.    0.25 -0.95 -0.47]\n",
+      "[ 1.    0.11 -0.81 -0.48]\n",
+      "[ 1.    0.22 -0.64 -0.4 ]\n",
+      "[ 1.    0.23 -0.56 -0.34]\n",
+      "[ 1.    0.24 -0.55 -0.4 ]\n",
+      "[ 1.    0.31 -0.59 -0.49]\n",
+      "[ 1.    0.35 -0.65 -0.61]\n",
+      "[ 1.    0.36 -0.7  -0.7 ]\n",
+      "[ 1.    0.37 -0.72 -0.72]\n",
+      "[ 1.    0.39 -0.7  -0.75]\n",
+      "[ 1.    0.4  -0.7  -0.83]\n",
+      "[ 1.    0.36 -0.67 -0.9 ]\n",
+      "[ 1.    0.38 -0.6  -0.93]\n",
+      "[ 1.    0.39 -0.51 -0.88]\n",
+      "[ 1.    0.42 -0.38 -0.81]\n",
+      "[ 1.    0.45 -0.28 -0.81]\n",
+      "[ 1.    0.48 -0.25 -0.84]\n",
+      "[ 1.    0.5  -0.15 -0.84]\n",
+      "[ 1.    0.52 -0.04 -0.84]\n",
+      "[ 1.    0.55  0.06 -0.82]\n",
+      "[ 1.    0.6   0.16 -0.72]\n",
+      "[ 1.    0.62  0.24 -0.68]\n",
+      "[ 1.    0.6   0.27 -0.69]\n",
+      "[ 1.    0.62  0.26 -0.66]\n",
+      "[ 1.    0.62  0.33 -0.68]\n",
+      "[ 1.    0.61  0.4  -0.74]\n",
+      "[ 1.    0.65  0.42 -0.79]\n",
+      "[ 1.    0.62  0.56 -0.9 ]\n",
+      "[ 1.    0.59  0.72 -1.03]\n",
+      "[ 1.    0.61  0.8  -1.22]\n",
+      "[ 1.    0.6   0.78 -1.34]\n",
+      "[ 1.    0.6   0.6  -1.32]\n",
+      "[ 1.    0.59  0.32 -1.07]\n",
+      "[ 1.    0.56  0.05 -0.81]\n",
+      "[ 1.    0.58 -0.14 -0.6 ]\n",
+      "[ 1.    0.6  -0.24 -0.41]\n",
+      "[ 1.    0.66 -0.26 -0.28]\n",
+      "[ 1.    0.74 -0.23 -0.22]\n",
+      "[ 1.    0.78  0.01 -0.18]\n",
+      "[ 1.    0.81  0.25 -0.25]\n",
+      "[ 1.    0.84  0.41 -0.34]\n",
+      "[ 1.    0.86  0.48 -0.42]\n",
+      "[ 1.    0.87  0.49 -0.44]\n",
+      "[ 1.    0.88  0.44 -0.42]\n",
+      "[ 1.    0.88  0.36 -0.33]\n",
+      "[ 1.    0.88  0.28 -0.22]\n",
+      "[ 1.    0.89  0.19 -0.11]\n",
+      "[ 1.    0.87  0.1  -0.06]\n",
+      "[1.   0.8  0.09 0.11]\n",
+      "[1.   0.8  0.12 0.15]\n",
+      "[1.   0.78 0.12 0.04]\n",
+      "[ 1.    0.85  0.13 -0.13]\n",
+      "[ 1.    0.88  0.2  -0.3 ]\n",
+      "[ 1.    0.84  0.23 -0.42]\n",
+      "[ 1.    0.79  0.19 -0.41]\n",
+      "[ 1.    0.84  0.   -0.19]\n",
+      "[ 1.    0.78 -0.17  0.02]\n",
+      "[ 1.    0.79 -0.3   0.22]\n",
+      "[ 1.    0.71 -0.29  0.25]\n",
+      "[ 1.    0.67 -0.2   0.21]\n",
+      "[ 1.    0.61 -0.1   0.05]\n",
+      "[ 1.   -0.47 -0.01 -0.25]\n",
+      "[ 1.    0.53  0.13 -0.17]\n",
+      "[ 1.    0.36  0.14 -0.4 ]\n"
      ]
     }
    ],
@@ -38,15 +151,33 @@
     "# while True: # While loop that loops forever\n",
     "#for 10 sec\n",
     "t_end = time.time() + 1\n",
+    "dataArray_ALL = np.empty((1,4)) ##fixed length based on samples\n",
+    "\n",
     "while time.time() < t_end:\n",
     "    while (arduinoData.inWaiting()==0): #Wait here until there is data\n",
     "        pass #do nothing\n",
     "    \n",
     "    arduinoString = arduinoData.readline() #read the line of text from the serial port\n",
-    "    dataArray = arduinoString.decode().replace('\\r\\n','').split('\\t').toarray(),astype(np.float)   #Split it into an array called dataArray\n",
+    "    dataArray = np.array(arduinoString.decode().replace('\\r\\n','').split('\\t')).astype(np.float)   #Split it into an array called dataArray\n",
     "    print(dataArray)\n",
-    "    # Write data to an excel file\n",
-    "arduinoData.close()\n"
+    "    \n",
+    "    # Seperate csv for every sample, or .mat files all together\n",
+    "    dataArray_ALL = np.append(dataArray_ALL, dataArray.reshape(1,-1), axis=0)    \n",
+    "arduinoData.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# field names  \n",
+    "fields = ['button', 'x', 'y', 'z'] \n",
+    "# name of csv file  \n",
+    "filename = \"test.csv\"\n",
+    "\n",
+    "np.savetxt('data.csv', dataArray_ALL, delimiter=',')"
    ]
   },
   {
