--- a/Reading from Arduino.ipynb
+++ b/Reading from Arduino.ipynb
@@ -168,24 +168,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataLabeled = np.append(dataArray_ALL, np.ones((dataArray_ALL.shape[0],1)), axis=1)\n",
     "# field names  \n",
     "fields = ['button', 'x', 'y', 'z'] \n",
+    "name='name'\n",
+    "letter='A'\n",
+    "iterNum='1';\n",
     "# name of csv file  \n",
-    "filename = \"test.csv\"\n",
-    "\n",
-    "np.savetxt('data.csv', dataArray_ALL, delimiter=',')"
+    "filename = letter+'_'+ name + '_'+iterNum + \".csv\"\n",
+    "np.savetxt(filename, dataArray_ALL, delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(118, 1)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#enumerate letters?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(118,)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(dataArray_ALL.shape[0]).reshape(-1,1)"
+   ]
   },
   {
    "cell_type": "code",
