edited np_to_txt() so accel values are comma separated

--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,9 @@
     "            for j in range(len(chunks[i])):\n",
     "                f.write('\\n\\n-,-,-\\n')\n",
     "                for k in range(len(chunks[i][j])):\n",
-    "#                     f.write(np.array_str(chunks[i][j][k]))\n",
-    "                    np.savetxt(f, chunks[i][j][k], fmt=\"%3.3f\", delimiter=',', newline='')\n",
-    "                    f.write('\\n')"
+    "                    np.savetxt(f, [chunks[i][j][k]], fmt=\"%3.3f\", delimiter=',', newline='')\n",
+    "                    f.write('\\n')\n",
+    "            "
    ]
   },
   {
@@ -469,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
