--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -171,66 +171,114 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\A_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n",
-      "Writing: lauren_data\\B_lauren*.csv\n"
+      "Writing: A_lauren.txt\n",
+      "Writing: A_katherine.txt\n",
+      "Writing: A_annie.txt\n",
+      "Writing: B_lauren.txt\n",
+      "Writing: B_katherine.txt\n",
+      "Writing: B_annie.txt\n",
+      "Writing: C_lauren.txt\n",
+      "Writing: C_katherine.txt\n",
+      "Writing: C_annie.txt\n",
+      "Writing: D_lauren.txt\n",
+      "Writing: D_katherine.txt\n",
+      "Writing: D_annie.txt\n",
+      "Writing: E_lauren.txt\n",
+      "Writing: E_katherine.txt\n",
+      "Writing: E_annie.txt\n",
+      "Writing: F_lauren.txt\n",
+      "Writing: F_katherine.txt\n",
+      "Writing: F_annie.txt\n",
+      "Writing: G_lauren.txt\n",
+      "Writing: G_katherine.txt\n",
+      "Writing: G_annie.txt\n",
+      "Writing: H_lauren.txt\n",
+      "Writing: H_katherine.txt\n",
+      "Writing: H_annie.txt\n",
+      "Writing: I_lauren.txt\n",
+      "Writing: I_katherine.txt\n",
+      "Writing: I_annie.txt\n",
+      "Writing: J_lauren.txt\n",
+      "Writing: J_katherine.txt\n",
+      "Writing: J_annie.txt\n",
+      "Writing: K_lauren.txt\n",
+      "Writing: K_katherine.txt\n",
+      "Writing: K_annie.txt\n",
+      "Writing: L_lauren.txt\n",
+      "Writing: L_katherine.txt\n",
+      "Writing: L_annie.txt\n",
+      "Writing: M_lauren.txt\n",
+      "Writing: M_katherine.txt\n",
+      "Writing: M_annie.txt\n",
+      "Writing: N_lauren.txt\n",
+      "Writing: N_katherine.txt\n",
+      "Writing: N_annie.txt\n",
+      "Writing: O_lauren.txt\n",
+      "Writing: O_katherine.txt\n",
+      "Writing: O_annie.txt\n",
+      "Writing: P_lauren.txt\n",
+      "Writing: P_katherine.txt\n",
+      "Writing: P_annie.txt\n",
+      "Writing: Q_lauren.txt\n",
+      "Writing: Q_katherine.txt\n",
+      "Writing: Q_annie.txt\n",
+      "Writing: R_lauren.txt\n",
+      "Writing: R_katherine.txt\n",
+      "Writing: R_annie.txt\n",
+      "Writing: S_lauren.txt\n",
+      "Writing: S_katherine.txt\n",
+      "Writing: S_annie.txt\n",
+      "Writing: T_lauren.txt\n",
+      "Writing: T_katherine.txt\n",
+      "Writing: T_annie.txt\n",
+      "Writing: U_lauren.txt\n",
+      "Writing: U_katherine.txt\n",
+      "Writing: U_annie.txt\n",
+      "Writing: V_lauren.txt\n",
+      "Writing: V_katherine.txt\n",
+      "Writing: V_annie.txt\n",
+      "Writing: W_lauren.txt\n",
+      "Writing: W_katherine.txt\n",
+      "Writing: W_annie.txt\n",
+      "Writing: X_lauren.txt\n",
+      "Writing: X_katherine.txt\n",
+      "Writing: X_annie.txt\n",
+      "Writing: Y_lauren.txt\n",
+      "Writing: Y_katherine.txt\n",
+      "Writing: Y_annie.txt\n",
+      "Writing: Z_lauren.txt\n",
+      "Writing: Z_katherine.txt\n",
+      "Writing: Z_annie.txt\n",
+      "Writing: apostrophe_lauren.txt\n",
+      "Writing: apostrophe_katherine.txt\n",
+      "Writing: apostrophe_annie.txt\n",
+      "Writing: backspace_lauren.txt\n",
+      "Writing: backspace_katherine.txt\n",
+      "Writing: backspace_annie.txt\n",
+      "Writing: comma_lauren.txt\n",
+      "Writing: comma_katherine.txt\n",
+      "Writing: comma_annie.txt\n",
+      "Writing: done_lauren.txt\n",
+      "Writing: done_katherine.txt\n",
+      "Writing: done_annie.txt\n",
+      "Writing: exclamation_point_lauren.txt\n",
+      "Writing: exclamation_point_katherine.txt\n",
+      "Writing: exclamation_point_annie.txt\n",
+      "Writing: period_lauren.txt\n",
+      "Writing: period_katherine.txt\n",
+      "Writing: period_annie.txt\n",
+      "Writing: question_mark_lauren.txt\n",
+      "Writing: question_mark_katherine.txt\n",
+      "Writing: question_mark_annie.txt\n",
+      "Writing: quotes_lauren.txt\n",
+      "Writing: quotes_katherine.txt\n",
+      "Writing: quotes_annie.txt\n",
+      "Writing: slash_lauren.txt\n",
+      "Writing: slash_katherine.txt\n",
+      "Writing: slash_annie.txt\n",
+      "Writing: space_lauren.txt\n",
+      "Writing: space_katherine.txt\n",
+      "Writing: space_annie.txt\n"
      ]
     }
    ],
@@ -239,40 +287,66 @@
     "NUM_SAMPLES_PER_CHUNK = 300\n",
     "NUM_MEASUREMENTS_PER_SAMPLE = 3\n",
     "NUM_CHUNKS_PER_RECORDING = 5   \n",
-    "##for each name\n",
-    "path = r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\DATA\"\n",
-    "names=[\"lauren\"]#,\"katherine\",\"annie\",\"hallie\"\n",
-    "letters=[\"A\",\"B\"]#,\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
-    "          #\"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\"]\n",
-    "for n in names:\n",
-    "    for l in letters:\n",
+    "\n",
+    "path = r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\letters\"\n",
+    "write_path = r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\data\"\n",
+    "names=[\"lauren\",\"katherine\",\"annie\"]#,\"hallie\"]\n",
+    "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
+    "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\"]\n",
+    "for l in letters: \n",
+    "    for n in names:\n",
     "        letter_list =[]\n",
-    "        fileWrite =path+'\\ouput_'+l+'_'+n+'.txt'\n",
+    "        fileWrite =write_path+'\\\\'+l+'\\ouput_'+l+'_'+n+'.txt' ##CHANGE TO OUTPUT \n",
     "        open(fileWrite, 'w').close()\n",
-    "        num=1;\n",
-    "        for file in glob.glob(path+'\\lauren_data\\\\'+l+'_'+n+'*.csv'):\n",
-    "            print('Writing: lauren_data\\\\'+l+'_'+n+'-'+num'.csv')\n",
-    "            num = num+1;\n",
-    "        ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
+    "        print('Writing: '+l+'_'+n+'.txt')       \n",
+    "        for file in glob.glob(path+'\\\\'+l+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
+    "            ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
     "            recordings = csv_to_np([file])\n",
     "\n",
     "            chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
     "            letter_list.append(chunks)\n",
-    "            np_to_txt(letter_list, fileWrite)\n",
-    "            \n",
-    "    ## for each letter\n",
-    "        ##files = all files with name_letter\n",
-    "        ##recordings = csv_to_np(train)\n",
-    "        ##chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
-    "        ## chunks to .txt"
+    "            np_to_txt(letter_list, fileWrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing: unknown_annie.txt\n",
+      "C:\\Users\\kathe\\Documents\\GitHub\\gesture_recognition_ee292d\\unknown_annie_*.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "############################################################################################################################\n",
+    "NUM_SAMPLES_PER_CHUNK = 300\n",
+    "NUM_MEASUREMENTS_PER_SAMPLE = 3\n",
+    "NUM_CHUNKS_PER_RECORDING = 5   \n",
+    "\n",
+    "path = r'C:\\Users\\kathe\\Documents\\GitHub\\gesture_recognition_ee292d'\n",
+    "write_path = r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\data\"\n",
+    "names=[\"annie\"]#,\"hallie\"]\n",
+    "letters=[\"unknown\"]\n",
+    "for l in letters: \n",
+    "    for n in names:\n",
+    "        letter_list =[]\n",
+    "        fileWrite =write_path+'\\\\negative\\output_negative'+'_'+n+'.txt'\n",
+    "        open(fileWrite, 'w').close()\n",
+    "        print('Writing: '+l+'_'+n+'.txt')  \n",
+    "        \n",
+    "        print(path+'\\\\'+l+'_'+n +'_'+'*.csv')\n",
+    "        for file in glob.glob(path+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
+    "            ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
+    "            recordings = csv_to_np([file])\n",
+    "            chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
+    "            letter_list.append(chunks)\n",
+    "            np_to_txt(letter_list, fileWrite)"
+   ]
   },
   {
    "cell_type": "code",
