--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -171,9 +171,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing: K_lauren.txt\n",
-      "Writing: K_katherine.txt\n",
-      "Writing: K_annie.txt\n"
+      "Writing: A_lauren.txt\n",
+      "Writing: A_katherine.txt\n",
+      "Writing: A_annie.txt\n",
+      "Writing: B_lauren.txt\n",
+      "Writing: B_katherine.txt\n",
+      "Writing: B_annie.txt\n",
+      "Writing: C_lauren.txt\n",
+      "Writing: C_katherine.txt\n",
+      "Writing: C_annie.txt\n",
+      "Writing: D_lauren.txt\n",
+      "Writing: D_katherine.txt\n",
+      "Writing: D_annie.txt\n",
+      "Writing: E_lauren.txt\n",
+      "Writing: E_katherine.txt\n",
+      "Writing: E_annie.txt\n",
+      "Writing: F_lauren.txt\n",
+      "Writing: F_katherine.txt\n",
+      "Writing: F_annie.txt\n",
+      "Writing: G_lauren.txt\n",
+      "Writing: G_katherine.txt\n",
+      "Writing: G_annie.txt\n",
+      "Writing: H_lauren.txt\n",
+      "Writing: H_katherine.txt\n",
+      "Writing: H_annie.txt\n",
+      "Writing: I_lauren.txt\n",
+      "Writing: I_katherine.txt\n",
+      "Writing: I_annie.txt\n"
      ]
     }
    ],
@@ -191,7 +215,7 @@
     "for l in letters: \n",
     "    for n in names:\n",
     "        letter_list =[]\n",
-    "        fileWrite =write_path+'\\\\'+l+'\\output_'+l+'_'+n+'.txt' ##CHANGE TO OUTPUT \n",
+    "        fileWrite =write_path+'\\\\'+l+'\\output_'+l+'_'+n+'.txt'  \n",
     "        open(fileWrite, 'w').close()\n",
     "        print('Writing: '+l+'_'+n+'.txt')       \n",
     "        for file in glob.glob(path+'\\\\'+l+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
