--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -171,33 +171,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing: A_lauren.txt\n",
-      "Writing: A_katherine.txt\n",
-      "Writing: A_annie.txt\n",
-      "Writing: B_lauren.txt\n",
-      "Writing: B_katherine.txt\n",
-      "Writing: B_annie.txt\n",
-      "Writing: C_lauren.txt\n",
-      "Writing: C_katherine.txt\n",
-      "Writing: C_annie.txt\n",
-      "Writing: D_lauren.txt\n",
-      "Writing: D_katherine.txt\n",
-      "Writing: D_annie.txt\n",
-      "Writing: E_lauren.txt\n",
-      "Writing: E_katherine.txt\n",
-      "Writing: E_annie.txt\n",
-      "Writing: F_lauren.txt\n",
-      "Writing: F_katherine.txt\n",
-      "Writing: F_annie.txt\n",
-      "Writing: G_lauren.txt\n",
-      "Writing: G_katherine.txt\n",
-      "Writing: G_annie.txt\n",
-      "Writing: H_lauren.txt\n",
-      "Writing: H_katherine.txt\n",
-      "Writing: H_annie.txt\n",
-      "Writing: I_lauren.txt\n",
-      "Writing: I_katherine.txt\n",
-      "Writing: I_annie.txt\n"
+      "Writing: negative_lauren.txt\n",
+      "Writing: negative_katherine.txt\n",
+      "Writing: negative_annie.txt\n",
+      "Writing: negative_chris.txt\n"
      ]
     }
    ],
@@ -209,7 +186,7 @@
     "\n",
     "path = r\"D:\\292d\\letters\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\letters\"\n",
     "write_path = r\"D:\\292d\\data\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\data\"\n",
-    "names=[\"lauren\",\"katherine\",\"annie\"]#,\"hallie\"]\n",
+    "names=[\"lauren\",\"katherine\",\"annie\", \"chris\"]#,\"hallie\"]\n",
     "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
     "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
     "for l in letters: \n",
