added raw data called letters

--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -120,6 +120,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# given a list of data file paths, return one list containing recording data, each element in list \n",
+    "# is an np.array containing entire recording\n",
+    "def csv_to_np(data_list_name):\n",
+    "    recordings = []\n",
+    "    for ind, recording in enumerate(data_list_name):\n",
+    "        recording_np = np.genfromtxt(recording, delimiter=',')\n",
+    "        recordings.append(recording_np)\n",
+    "    return recordings\n",
+    "\n",
+    "\n",
+    "# Transfer from 10s recordings to 300, 3 data chunks\n",
+    "# Each recording contributes NUM_CHUNKS_PER_RECORDING chunks to output to retain evenly distributed data\n",
+    "# ASSUMPTIONS: input parameter recordings is a list of np arrays of recordings\n",
+    "def zp_data(recordings, chunk_length):\n",
+    "    out = []\n",
+    "    for recording in recordings:\n",
+    "        press_inds = np.argwhere(recording[:,0]==1).squeeze()\n",
+    "        num_samples_pressed = recording[press_inds,:].shape[0]\n",
+    "        \n",
+    "        # CASE 0: check that we have at least 300 samples in entire recording\n",
+    "        if recording.shape[0] < chunk_length:\n",
+    "            sample_pad = np.zeros((chunk_length,1))\n",
+    "            sample_pad[0:recording.shape[0],:] = recording[:,1:]\n",
+    "            out.append(sample_pad)\n",
+    "        \n",
+    "        # CASE 1: we have enough  samples to fill out chunks with only press data\n",
+    "        elif num_samples_pressed >= NUM_SAMPLES_PER_CHUNK + NUM_CHUNKS_PER_RECORDING:\n",
+    "            \n",
+    "            # First chunk (always capture very beginning of data)\n",
+    "            first_chunk_start = press_inds[0]\n",
+    "            out.append(recording[first_chunk_start:first_chunk_start+NUM_SAMPLES_PER_CHUNK,1:])\n",
+    "            \n",
+    "            # Last chunk (always capture very end of data)\n",
+    "            last_chunk_start = press_inds[-1]-NUM_SAMPLES_PER_CHUNK+1\n",
+    "            out.append(recording[last_chunk_start:last_chunk_start+NUM_SAMPLES_PER_CHUNK,1:])\n",
+    "            \n",
+    "            # Middle chunks (evenly space from first chunk for simplicity)\n",
+    "            step = num_samples_pressed // NUM_CHUNKS_PER_RECORDING\n",
+    "            prev_chunk_start = first_chunk_start\n",
+    "            for i in range(NUM_CHUNKS_PER_RECORDING-2):\n",
+    "                next_chunk_start = prev_chunk_start+step\n",
+    "                out.append(recording[next_chunk_start:next_chunk_start+NUM_SAMPLES_PER_CHUNK,1:])\n",
+    "                prev_chunk_start = next_chunk_start\n",
+    "                \n",
+    "        # CASE 2: We don't have enough samples to fill chunks: need to pull from surrounding data\n",
+    "        elif num_samples_pressed < NUM_SAMPLES_PER_CHUNK + NUM_CHUNKS_PER_RECORDING:\n",
+    "            # First chunk: captures until end of recording, starting however many samples before needed to do that\n",
+    "            first_chunk_start = max(0, press_inds[-1]-NUM_SAMPLES_PER_CHUNK+1)\n",
+    "            out.append(recording[first_chunk_start:first_chunk_start+NUM_SAMPLES_PER_CHUNK,1:])\n",
+    "            \n",
+    "            # Last chunk: captures from start of recording, going however many samples after needed to do that\n",
+    "            last_chunk_end = min(recording.shape[0], press_inds[0]+NUM_SAMPLES_PER_CHUNK)\n",
+    "            out.append(recording[last_chunk_end-NUM_SAMPLES_PER_CHUNK:last_chunk_end,1:])\n",
+    "            \n",
+    "            # Middle chunks: (evenly space from first chunk for simplicity)\n",
+    "            step = (last_chunk_end - first_chunk_start+1) // NUM_CHUNKS_PER_RECORDING\n",
+    "            prev_chunk_start = first_chunk_start\n",
+    "            for i in range(NUM_CHUNKS_PER_RECORDING-2):\n",
+    "                next_chunk_start = prev_chunk_start+step\n",
+    "                out.append(recording[next_chunk_start:next_chunk_start+NUM_SAMPLES_PER_CHUNK,1:])\n",
+    "                prev_chunk_start = next_chunk_start\n",
+    "                \n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
