added corrected files

--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -385,6 +385,7 @@
     }
    ],
    "source": [
+    "\n",
     "############################################################################################################################\n",
     "chunk_length=400;\n",
     "\n",
@@ -393,6 +394,7 @@
     "names=[\"katherine\",\"chris\",\"annie\", \"lauren\",\"hallie\"]\n",
     "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
     "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
+    "letter=[\"A\"]\n",
     "for l in letters: \n",
     "    for n in names:\n",
     "        letter_list =[]\n",
@@ -402,9 +404,14 @@
     "        for file in glob.glob(path+'\\\\'+l+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
     "            ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
     "            recordings = csv_to_np([file])\n",
-    "            press_inds = np.argwhere(recording[:,0]==1).squeeze()\n",
-    "            chunk = zp_data(recordings, chunk_length)\n",
-    "            letter_list.append(chunk)\n",
+    "#             press_inds = np.argwhere(recording[:,0]==1).squeeze()\n",
+    "#             chunk = zp_data(recordings, chunk_length)\n",
+    "            \n",
+    "            NUM_SAMPLES_PER_CHUNK = 400\n",
+    "            NUM_MEASUREMENTS_PER_SAMPLE = 3\n",
+    "            NUM_CHUNKS_PER_RECORDING = 5\n",
+    "            chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
+    "            letter_list.append(chunks)\n",
     "        np_to_txt(letter_list, fileWrite)"
    ]
   },
@@ -850,6 +857,49 @@
     "# test_chunk_data_size(chunks)\n",
     "test_chunk_toy_data()\n",
     "print(\"success!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##CHANGE ALL laurens data file numbers\n",
+    "import os\n",
+    "import glob \n",
+    "\n",
+    "path = r'D:\\292d\\\\DataLauren2'\n",
+    "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
+    "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
+    "n='lauren'\n",
+    "write_path = r'D:\\292d\\letters_trial'\n",
+    "\n",
+    "for l in letters: \n",
+    "    num = 1;    \n",
+    "    for file in glob.glob(path+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
+    "        fileWrite =write_path+'\\\\'+l+'\\\\'+l+'_'+n+'_'+str(num)+'_.csv' \n",
+    "        os.rename(file, fileWrite)\n",
+    "        num = num+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\292d\\\\DataLauren2\\Z_lauren_9.csv\n",
+      "D:\\292d\\letters_trial\\Z\\Z_lauren_30_.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(file)\n",
+    "print(fileWrite)"
    ]
   },
   {
