--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -394,13 +394,13 @@
     "names=[\"katherine\",\"chris\",\"annie\", \"lauren\",\"hallie\"]\n",
     "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
     "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
-    "letter=[\"A\"]\n",
+    "# letters=[\"A\"]\n",
     "for l in letters: \n",
     "    for n in names:\n",
     "        letter_list =[]\n",
     "        fileWrite =write_path+'\\\\'+l+'\\output_'+l+'_'+n+'.txt'  \n",
     "        open(fileWrite, 'w').close()\n",
-    "        print('Writing: '+l+'_'+n+'.txt')       \n",
+    "        print('Writing: '+l+'_'+n+'.txt') \n",
     "        for file in glob.glob(path+'\\\\'+l+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
     "            ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
     "            recordings = csv_to_np([file])\n",
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
     "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
     "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
     "n='lauren'\n",
-    "write_path = r'D:\\292d\\letters_trial'\n",
+    "write_path = r'D:\\292d\\letters'\n",
     "\n",
     "for l in letters: \n",
     "    num = 1;    \n",
